--- a/deo/default.hbs
+++ b/deo/default.hbs
@@ -16,7 +16,9 @@
 
     {{! Styles'n'Scripts }}
     <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
-    <link rel="stylesheet" type="text/css" href="{{asset "css/font-awesome.min.css"}}" />
+    <link rel="stylesheet" type="text/css" href="{{asset "css/font-awesome.min.css"}}" 
+    />
+    <link rel="stylesheet" type="text/css" href="{{asset "css/sunlight.dark.css"}}" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
 
     {{! Ghost outputs important style and meta data with this tag }}
@@ -38,6 +40,9 @@
     {{! The main JavaScript file for Casper }}
     <script type="text/javascript" src="{{asset "js/jquery.fitvids.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
+    <script type="text/javascript" src="{{asset "js/sunlight-min.js"}}"></script>
+    <script type="text/javascript" src="{{asset "js/sunlight.csharp-min.js"}}"></script>
+    <script type="text/javascript" src="{{asset "js/sunlight.css-min.js"}}"></script>
 
 </body>
 </html>
