--- a/deo/default.hbs
+++ b/deo/default.hbs
@@ -43,6 +43,16 @@
     <script type="text/javascript" src="{{asset "js/sunlight-min.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/sunlight.csharp-min.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/sunlight.css-min.js"}}"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-33158525-2', 'auto');
+      ga('send', 'pageview');
+
+    </script>
 
 </body>
 </html>
