Invokes sunlight highlighting

--- a/deo/default.hbs
+++ b/deo/default.hbs
@@ -43,6 +43,9 @@
     <script type="text/javascript" src="{{asset "js/sunlight-min.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/sunlight.csharp-min.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/sunlight.css-min.js"}}"></script>
+    <script type="text/javascript">
+        Sunlight.highlightAll();
+    </script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
