--- a/deo/assets/css/screen.css
+++ b/deo/assets/css/screen.css
@@ -176,10 +176,11 @@ html {
 body {
     height: 100%;
     max-height: 100%;
-    font-family: "Merriweather", serif;
+    font-family: "Baskerville","Georgia","Cambria","Times New Roman",serif;
     letter-spacing: 0.01rem;
     font-size: 1.8rem;
     line-height: 1.75em;
+    background: #fafaf9;
     color: #3A4145;
     -webkit-font-feature-settings: 'kern' 1;
     -moz-font-feature-settings: 'kern' 1;
@@ -233,12 +234,14 @@ h6 {
 }
 
 a {
-    color: #136fd2;
+    color: #428bca;
+    text-decoration: none;
     transition: color ease 0.2s;
 }
 
 a:hover {
-    color: #4183c4;
+    color: #2A6496;
+    text-decoration: underline;
 }
 
 p, ul, ol, dl {
@@ -323,7 +326,7 @@ blockquote cite a { font-weight: normal; }
 mark {
     background-color: #FFC336;
 }
-
+/*
 code, tt {
     padding: 1px 3px;
     font-family: Inconsolata, monospace, sans-serif;
@@ -357,7 +360,7 @@ pre code, tt {
     border: none;
     padding: 0;
 }
-
+*/
 kbd {
     display: inline-block;
     margin-bottom: 0.4em;
@@ -850,6 +853,16 @@ body:not(.post-template) .post-title {
    margin-bottom: 3.4rem;
 }
 
+.post-header a {
+    color: #4A4A4A;
+    text-decoration: none;
+}
+
+.post-header a:hover {
+    color: #4A4A4A;
+    text-decoration: underline;
+}
+
 .post-template .post-title {
     margin-bottom: 0;
 }
@@ -1307,13 +1320,18 @@ body:not(.post-template) .post-title {
 }
 
 .site-footer a {
-    color: #BBC7CC;
+    margin: 2em auto;
+    display: block;
+    background-color: #2A6496;
+    color: #fff;
     text-decoration: none;
-    font-weight: bold;
+    padding: 0.3em 1em;
+    text-align: center;
+    width: 1em;
 }
 
 .site-footer a:hover {
-    color: #50585D;
+    background-color: #428bca;
 }
 
 .poweredby {
