--- a/deo/default.hbs
+++ b/deo/default.hbs
@@ -18,8 +18,9 @@
     <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
     <link rel="stylesheet" type="text/css" href="{{asset "css/font-awesome.min.css"}}" 
     />
-    <link rel="stylesheet" type="text/css" href="{{asset "css/sunlight.dark.css"}}" />
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/styles/default.min.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/highlight.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="{{asset "css/vs.css"}}" />
 
     {{! Ghost outputs important style and meta data with this tag }}
     {{ghost_head}}
@@ -30,8 +31,7 @@
     {{{body}}}
 
     <footer class="site-footer clearfix">
-        <section class="copyright"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}</section>
-        <section class="poweredby">Proudly published with <a href="https://ghost.org">Ghost</a></section>
+        <a href="#"><i class="fa fa-arrow-up"></i></a>
     </footer>
 
     {{! Ghost outputs important scripts and data with this tag }}
@@ -43,9 +43,8 @@
     <script type="text/javascript" src="{{asset "js/sunlight-min.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/sunlight.csharp-min.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/sunlight.css-min.js"}}"></script>
-    <script type="text/javascript">
-        Sunlight.highlightAll();
-    </script>
+    <script type="text/javascript" src="{{asset "js/sunlight.javascript-min.js"}}"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
