--- a/deo/assets/css/vs.css
+++ b/deo/assets/css/vs.css
@@ -7,8 +7,8 @@ Visual Studio-like style based on original C# coloring by Jason Diamond <jason@d
   display: block;
   overflow-x: auto;
   padding: 0.5em;
-  background: white;
-  color: black;
+  background: #101011;
+  color: #dcdcdc;
   -webkit-text-size-adjust: none;
 }
 
@@ -17,7 +17,7 @@ Visual Studio-like style based on original C# coloring by Jason Diamond <jason@d
 .diff .hljs-header,
 .hljs-chunk,
 .apache .hljs-cbracket {
-  color: #008000;
+  color: #57a64a;
 }
 
 .hljs-keyword,
@@ -32,7 +32,7 @@ Visual Studio-like style based on original C# coloring by Jason Diamond <jason@d
 .nginx .hljs-title,
 .xml .hljs-tag,
 .xml .hljs-tag .hljs-value {
-  color: #00f;
+  color: #569cd6;
 }
 
 .hljs-string,
@@ -51,7 +51,7 @@ Visual Studio-like style based on original C# coloring by Jason Diamond <jason@d
 .hljs-date,
 .tex .hljs-formula,
 .coffeescript .hljs-attribute {
-  color: #a31515;
+  color: #d69d85;
 }
 
 .ruby .hljs-string,
@@ -73,21 +73,21 @@ Visual Studio-like style based on original C# coloring by Jason Diamond <jason@d
 .nginx .hljs-built_in,
 .tex .hljs-special,
 .hljs-prompt {
-  color: #2b91af;
+  color: #9b9b9b;
 }
 
 .hljs-phpdoc,
 .hljs-dartdoc,
 .hljs-javadoc,
 .hljs-xmlDocTag {
-  color: #808080;
+  color: #608b4e;
 }
 
 .hljs-type,
 .hljs-typename { font-weight: bold; }
 
-.vhdl .hljs-string { color: #666666; }
-.vhdl .hljs-literal { color: #a31515; }
+.vhdl .hljs-string { color: #9b9b9b; }
+.vhdl .hljs-literal { color: #d69d85; }
 .vhdl .hljs-attribute { color: #00b0e8; }
 
 .xml .hljs-attribute { color: #f00; }
