--- a/deo/assets/css/screen.css
+++ b/deo/assets/css/screen.css
@@ -326,11 +326,12 @@ blockquote cite a { font-weight: normal; }
 mark {
     background-color: #FFC336;
 }
-/*
+
 code, tt {
     padding: 1px 3px;
-    font-family: Inconsolata, monospace, sans-serif;
-    font-size: 0.85em;
+    font-family: "Consolas", monospace, sans-serif;
+    font-size: 0.9em;
+    line-height: 1.6em;
     white-space: pre-wrap;
     border: #E3EDF3 1px solid;
     background: #F7FAFB;
@@ -341,15 +342,12 @@ pre {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     margin: 0 0 1.75em 0;
-    border: #E3EDF3 1px solid;
     width: 100%;
-    padding: 10px;
-    font-family: Inconsolata, monospace, sans-serif;
+    font-family: "Consolas", monospace, sans-serif;
     font-size: 0.9em;
+    line-height: 1.6em;
     white-space: pre;
     overflow: auto;
-    background: #F7FAFB;
-    border-radius: 3px;
 }
 
 pre code, tt {
@@ -360,7 +358,7 @@ pre code, tt {
     border: none;
     padding: 0;
 }
-*/
+
 kbd {
     display: inline-block;
     margin-bottom: 0.4em;
@@ -471,7 +469,113 @@ margin on the iframe, cause it breaks stuff. */
    4. General - The main styles for the the theme
    ========================================================================== */
 
-/* Big cover image on the home page */
+/* Amadeus */
+/* Deo theme: */
+
+.deo-header {
+    width: 100%;
+}
+
+.deo-header-content {
+    width: 100%;
+    background-color: #eaeae9;
+}
+.deo-header h3 {
+    padding: 12px 15px 8px 15px;
+    color: #000;
+    margin: 0;
+    text-align: center;
+}
+.deo-tags {
+    height: 3px;
+    overflow: visible;
+    background: #d66;
+    text-align: right;
+    width: 100%;
+    background-color: transparent;
+    font-size: 14px;
+    line-height: 18px;
+    clear: right;
+    color: #9EABB3;
+    font-family: "Open Sans", sans-serif;
+} 
+.deo-tags a, .deo-tags a:hover {
+    color: #000;
+    text-decoration: none;
+    transition: all ease 0.2;
+}
+
+.content {
+    padding-top: 2em;
+}
+
+.header-link {
+    display: inline-block;
+    float: left;
+    color: #fff;
+    font-weight: bold;
+    padding: 0 1em;
+}
+
+.taglet {
+    display: inline-block;
+    border-top: 3px solid #d66;
+    padding: 0 1em;
+}
+
+.deo-tags-description {
+    padding: 3px 1em 0 0;
+}
+
+/* backgrounds: */
+.header-taglet-ux {
+    background-color: #6fa;
+}
+.header-taglet-Analyzers {
+    background-color: #6af;
+}
+.header-taglet-Roslyn {
+    background-color: #6dd;
+}
+/* languages go last. they define the color */
+.header-taglet-css {
+    background-color: #a6a;
+}
+.header-taglet-C\# {
+    background-color: #d6d;
+}
+.header-taglet-c\# {
+    background-color: #f00;
+}
+/* borders: */
+.taglet-ui {
+    border-color: #6f6;
+}
+.taglet-ux {
+    border-color: #6fa;
+}
+.taglet-Analyzers {
+    border-color: #6af;
+}
+.taglet-Roslyn {
+    border-color: #6dd;
+}
+/* languages go last. they define the color */
+
+.taglet-css {
+    border-color: #a6a;
+}
+.taglet-C\# {
+    border-color: #d6d;
+}
+.taglet-c\# {
+    border-color: #f00;
+}
+
+
+/* okay all done */
+
+/* Big cover image on the home page  */
 .main-header {
     position: relative;
     display: table;
@@ -651,15 +755,15 @@ margin on the iframe, cause it breaks stuff. */
 .main-nav.overlay a:hover {
     color: #222;
     border-color: #fff;
-    background: #fff;
+    color: #f5f8fa;
+    background: #5A6165;
     transition: all 0.1s ease;
 }
 
 /* Add a border to the buttons on hover */
 .back-button:hover,
 .subscribe-button:hover {
-    border-color: #bfc8cd;
-    color: #9EABB3;
+    border-color: #f5f8fa;
 }
 
 /* The details of your blog. Defined in ghost/settings/ */
@@ -677,29 +781,28 @@ margin on the iframe, cause it breaks stuff. */
     font-size: 2rem;
     line-height: 1.5em;
     font-weight: 400;
-    font-family: "Merriweather", serif;
     letter-spacing: 0.01rem;
     color: rgba(255,255,255,0.8);
 }
 
 .no-cover.main-header {
-    min-height: 160px;
-    max-height: 40%;
-    background: #f5f8fa;
+    height: 100px;
+    color: #f5f8fa;
+    background-color: #3A4145;
 }
 
 .no-cover .page-title {
-    color: rgba(0,0,0,0.8);
+    color: #f5f8fa;
 }
 
 .no-cover .page-description {
-    color: rgba(0,0,0,0.5);
+    color: #f5f8fa;
 }
 
 .no-cover .main-nav.overlay .back-button,
 .no-cover .main-nav.overlay .subscribe-button {
-    color: rgba(0,0,0,0.4);
-    border-color: rgba(0,0,0,0.3);
+    color: #f5f8fa;
+    border-color: #f5f8fa;
 }
 
 /* Add subtle load-in animation for content on the home page */
@@ -718,6 +821,7 @@ margin on the iframe, cause it breaks stuff. */
 
 /* Every post, on every page, gets this style on its <article> tag */
 .post {
+    background: #fafaf9;
     position: relative;
     width: 80%;
     max-width: 710px;
@@ -853,6 +957,12 @@ body:not(.post-template) .post-title {
    margin-bottom: 3.4rem;
 }
 
+.post-content video {
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+}
+
 .post-header a {
     color: #4A4A4A;
     text-decoration: none;
@@ -872,9 +982,10 @@ body:not(.post-template) .post-title {
 }
 
 .post-template .post-date {
-    padding: 0;
+    padding: 0 1em 0 0;
     margin: 0;
     border: none;
+    float: right;
 }
 
 /* Stop .full-img from creating horizontal scroll - slight hack due to
@@ -915,7 +1026,7 @@ body:not(.post-template) .post-title {
 /* The author credit area after the post */
 .post-footer {
     position: relative;
-    margin: 6rem 0 0 0;
+    margin: 8rem 0 0 0;
     padding: 6rem 0 0 0;
     border-top: #EBF2F6 1px solid;
 }
@@ -1512,14 +1623,14 @@ body:not(.post-template) .post-title {
         height: 44px;
         line-height: 41px;
         border-radius: 0;
-        color: #2e2e2e;
+        color: #f5f8fa;
         background: transparent;
     }
     .back-button:hover,
     .subscribe-button:hover {
-        border-color: #ebeef0;
-        color: #2e2e2e;
-        background: #ebeef0;
+        border-color: #f5f8fa;
+        color: #f5f8fa;
+        background: #5A6165;
     }
 
     .back-button {
@@ -1733,7 +1844,6 @@ body:not(.post-template) .post-title {
     }
 
 }
-
 
 /* ==========================================================================
    12. Animations
