--- a/deo/default.hbs
+++ b/deo/default.hbs
@@ -20,18 +20,18 @@
     />
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/styles/default.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/highlight.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="{{asset "css/vs.css"}}" />
+    <link rel="stylesheet" type="text/css" href="{{asset "css/monokai_sublime.css"}}" />
 
     {{! Ghost outputs important style and meta data with this tag }}
     {{ghost_head}}
 </head>
-<body class="{{body_class}}">
+<body class="{{body_class}}" id="header-anchor" >
 
     {{! Everything else gets inserted here }}
     {{{body}}}
 
     <footer class="site-footer clearfix">
-        <a href="#"><i class="fa fa-arrow-up"></i></a>
+        <a class="arctic_scroll" href="#header-anchor"><i class="fa fa-arrow-up"></i></a>
     </footer>
 
     {{! Ghost outputs important scripts and data with this tag }}
@@ -40,10 +40,6 @@
     {{! The main JavaScript file for Casper }}
     <script type="text/javascript" src="{{asset "js/jquery.fitvids.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
-    <script type="text/javascript" src="{{asset "js/sunlight-min.js"}}"></script>
-    <script type="text/javascript" src="{{asset "js/sunlight.csharp-min.js"}}"></script>
-    <script type="text/javascript" src="{{asset "js/sunlight.css-min.js"}}"></script>
-    <script type="text/javascript" src="{{asset "js/sunlight.javascript-min.js"}}"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
