--- a/deo/post.hbs
+++ b/deo/post.hbs
@@ -6,11 +6,16 @@
 {{! Everything inside the #post tags pulls data from the post }}
 {{#post}}
 
-<header class="main-header post-head {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}">
-    <nav class="main-nav {{#if image}}overlay{{/if}} clearfix">
+<header class="main-header {{#if @blog.cover}}" style="background-image: url({{@blog.cover}}){{else}}no-cover{{/if}}">
+    <nav class="main-nav overlay clearfix">
         <a class="back-button icon-arrow-left" href="{{@blog.url}}">Home</a>
         <a class="subscribe-button icon-feed" href="{{@blog.url}}/rss/">Subscribe</a>
     </nav>
+    <div class="vertical">
+        <div class="main-header-content inner">
+            <h1 class="page-title">{{@blog.title}}</h1>
+        </div>
+    </div>
 </header>
 
 <main class="content" role="main">
@@ -19,13 +24,20 @@
 
         <header class="post-header">
             <h1 class="post-title">{{title}}</h1>
-            <section class="post-meta">
-                <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="DD MMMM YYYY"}}</time> {{tags prefix=" on "}}
-            </section>
+            <div class="deo-tags {{#foreach tags}}header-taglet-{{name}} {{/foreach}}">
+                {{#foreach tags}}<a href="{{url}}" class="taglet taglet-{{name}}">{{name}}</a>{{/foreach}}
+            </div>
         </header>
 
         <section class="post-content">
             {{content}}
+        </section>
+
+        <section class="post-meta">
+            <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="DD MMMM YYYY"}}</time>
+            <div class="deo-tags {{#foreach tags}}header-taglet-{{name}} {{/foreach}}">
+                <span class="deo-tags-description">Read other articles about</span> {{#foreach tags}}<a href="{{url}}" class="taglet taglet-{{name}}">{{name}}</a>{{/foreach}}
+            </div>
         </section>
 
         <footer class="post-footer">
