--- a/deo/assets/css/screen.css
+++ b/deo/assets/css/screen.css
@@ -580,8 +580,7 @@ margin on the iframe, cause it breaks stuff. */
     position: relative;
     display: table;
     width: 100%;
-    height: 100%;
-    margin-bottom: 5rem;
+    height: 100px;
     text-align: center;
     background: #222 no-repeat center center;
     background-size: cover;
@@ -636,7 +635,7 @@ margin on the iframe, cause it breaks stuff. */
     display: block;
     content: " ";
     width: 150px;
-    height: 130px;
+    height: 100px;
     border-radius: 100%;
     position: absolute;
     bottom: 0;
@@ -961,6 +960,23 @@ body:not(.post-template) .post-title {
     display: block;
     margin: 0 auto;
     max-width: 100%;
+    position: relative;
+}
+.post-content video:before {
+    position: absolute;
+    display: block;
+    top:0;right:0;bottom:0;left:0;
+    background: rgba(4, 38, 86, 0.5);
+    /*background: rgba(255, 255, 255, 0.5);*/
+    text-align: center;
+    color: #000;
+    content: "\f01d";
+    font-size: 30px;
+    opacity: 1;
+    transition: background .1s linear;
+}
+.post-content video:hover:before {
+    opacity: 0;
 }
 
 .post-header a {
@@ -978,7 +994,7 @@ body:not(.post-template) .post-title {
 }
 
 .post-template .post-meta {
-    margin: 0;
+    margin: 0 0 4rem 0;
 }
 
 .post-template .post-date {
@@ -1179,30 +1195,26 @@ body:not(.post-template) .post-title {
    ========================================================================== */
 
 .post-head.main-header {
-    height: 65%;
-    min-height: 180px;
+    height: 100px;
 }
 
 .no-cover.post-head.main-header {
-    height: 85px;
+    height: 100px;
     min-height: 0;
     margin-bottom: 0;
     background: transparent;
 }
 
 .tag-head.main-header {
-    height: 40%;
-    min-height: 180px;
+    height: 100px;
 }
 
 .author-head.main-header {
-    height: 40%;
-    min-height: 180px;
+    height: 100px;
 }
 
 .no-cover.author-head.main-header {
-    height: 10%;
-    min-height: 100px;
+    height: 100px;
     background: transparent;
 }
 
@@ -1477,17 +1489,14 @@ body:not(.post-template) .post-title {
         -webkit-box-sizing: border-box;
         -moz-box-sizing: border-box;
         box-sizing: border-box;
-        height: auto;
-        min-height: 240px;
-        height: 60%;
-        padding: 15% 0;
+        height: 100px;
     }
 
     .scroll-down,
     .home-template .main-header:after { display: none; }
 
     .archive-template .main-header {
-        min-height: 180px;
+        height: 100px;
         padding: 10% 0;
     }
 
@@ -1563,16 +1572,16 @@ body:not(.post-template) .post-title {
     }
 
     .post-head.main-header {
-        height:45%;
+        height:100px;
     }
 
     .tag-head.main-header,
     .author-head.main-header {
-        height: 30%;
+        height: 100px;
     }
 
     .no-cover.post-head.main-header {
-        height: 55px;
+        height: 100px;
         padding: 0;
     }
 
@@ -1591,17 +1600,15 @@ body:not(.post-template) .post-title {
 
     .main-header {
         margin-bottom: 15px;
-        height: 40%;
+        height: 100px;
     }
 
     .no-cover.main-header {
-        height: 30%;
+        height: 100px;
     }
 
     .archive-template .main-header {
-        max-height: 20%;
-        min-height: 160px;
-        padding: 10% 0;
+        height: 100px;
     }
 
     .main-nav {
@@ -1823,12 +1830,12 @@ body:not(.post-template) .post-title {
     }
 
     .post-head.main-header {
-        height: 30%;
+        height: 100px;
     }
 
     .tag-head.main-header,
     .author-head.main-header {
-        height: 20%;
+        height: 100px;
     }
 
     .author-profile .author-image {
@@ -1841,6 +1848,10 @@ body:not(.post-template) .post-title {
 
     .archive-template .main-header .page-description {
         display: none;
+    }
+
+    .deo-tags {
+        font-size: 10px;
     }
 
 }
