--- a/deo/post.hbs
+++ b/deo/post.hbs
@@ -24,10 +24,12 @@
 
         <header class="post-header">
             <h1 class="post-title">{{title}}</h1>
+        </header>
+        <section class="post-meta">
             <div class="deo-tags {{#foreach tags}}header-taglet-{{name}} {{/foreach}}">
                 {{#foreach tags}}<a href="{{url}}" class="taglet taglet-{{name}}">{{name}}</a>{{/foreach}}
             </div>
-        </header>
+        </section>
 
         <section class="post-content">
             {{content}}
@@ -36,7 +38,7 @@
         <section class="post-meta">
             <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="DD MMMM YYYY"}}</time>
             <div class="deo-tags {{#foreach tags}}header-taglet-{{name}} {{/foreach}}">
-                <span class="deo-tags-description">Read other articles about</span> {{#foreach tags}}<a href="{{url}}" class="taglet taglet-{{name}}">{{name}}</a>{{/foreach}}
+                {{#foreach tags}}<a href="{{url}}" class="taglet taglet-{{name}}">{{name}}</a>{{/foreach}}
             </div>
         </section>
 
